fix extra whitespace in content + add author blob to website sounds

--- a/src/css/blocks/_content.scss
+++ b/src/css/blocks/_content.scss
@@ -3,10 +3,6 @@
 /// @group blocks
 ////
 
-.content,
-.e-content {
-	--flow-space: var(--size-space);
-}
 .content {
 	container: content / inline-size;
 	// required: works like overflow for this .pantheon grid item
